# attendact

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md
.github/workflows/: api-deploy.yml  deploy.yml  web-deploy.yml
apps/api/: pyproject.toml
apps/api/migrations/: 0001_stripe_subscriptions.sql
apps/api/src/: main.py
apps/api/src/db/: client.py
apps/api/src/db/migrations/: 001_create_schema.sql  002_rls_policies.sql  003_seed_dogfood.sql
apps/api/src/ml/: calendar.py  calibrate.py  explain.py  features.py  heuristic.py  insights.py  locations.py  model.py  score_store.py
apps/api/src/routes/: audit.py  billing.py  geocode.py  insights.py  outcomes.py  score.py
apps/api/src/whatsapp/: client.py  templates.py  triggers.py
apps/api/tests/: test_features.py
apps/web/: index.html  package-lock.json  package.json
apps/web/public/: landing.html
apps/web/src/: index.css  main.tsx
apps/web/src/components/: AccessGate.tsx  ExplanationCard.tsx  Layout.tsx  RiskBadge.tsx
apps/web/src/lib/: api.ts
apps/web/src/routes/: Audit.tsx  Dashboard.tsx  Demo.tsx  Insights.tsx  Review.tsx  ScoreBulk.tsx  ScoreOne.tsx
ops/coolify/: Caddyfile  api.dockerfile  docker-compose.yml  web.dockerfile
