[project]
name = "attendact-api"
version = "0.1.0"
description = "AttendAct API - UAE no-show prediction signal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "supabase>=2.11.0",
    "xgboost>=2.1.0",
    "shap>=0.46.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "hijri-converter>=2.3.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "sentry-sdk[fastapi]>=2.19.0",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
